# cukiller

./: .dockerignore  .env.dist  .env.example  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.bot.dev  Dockerfile.matchmaking  Dockerfile.web  README.md  bot.Dockerfile  bot.py  docker-compose-test.yml  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  graphgetter.Dockerfile  main.py  manage.py  matchmaking.Dockerfile  pyproject.toml  requirements.txt  stats.Dockerfile  upstream-preserve-compose.sh
.github/workflows/: containers.yml  deploy.yml  publish.yml  ruff.yml  uv.yml
.serena/: project.yml
app_telegram/: admin.py  apps.py  models.py
app_telegram/migrations/: 0001_initial.py  0002_callrequest.py  0003_alter_tguser_fullname.py  0004_remove_tguser_fullname_remove_tguser_phone_number_and_more.py
bot/: main.py
bot/filters/: admin.py  confirmed.py  debug.py  group_key.py  ingame.py  private_messages.py  user.py
bot/handlers/: admin.py  echo.py  join_request.py  kills_confirmation.py  leave_game.py  mainloop.py  mainloop_dialog.py  matchmaking.py  metrics.py  my_profile.py  participation.py  profile_moderation.py  registration_dialog.py  reroll.py  rules.py  start.py  user_dialog.py
bot/middlewares/: environment.py  game.py  logging.py  private_messages.py  register.py  user.py
bot/misc/: states.py
bot/models/: commands.py
bot/services/: admin_chat.py  discussion_invite.py  metrics.py  player_service.py  profile_generator.py
cmd/graphgetter/: main.go
cmd/matchmaking/: main.go
cmd/stats/: main.go
db/: __init__.py  backend.py  main.py
db/models/: __init__.py  base.py  chat.py  constants.py  game.py  kill_event.py  message_template.py  pending_profile.py  player.py  tg_user.py  user.py
dj_ac/: asgi.py  settings.py  urls.py  wsgi.py
docs/: bot.yaml  graphgetter.yaml  openapi.yml
handlers/: start.py
infra/sql/: 001_init.sql
internal/graphgetter/: api.go  config.go  db.go
internal/matchmaking/: api.go  config.go  db.go  matchmaking.go  player_data.go
internal/shared/: db.go  env.go  logging.go
internal/stats/: api.go  config.go  db.go
matchmaking/: .gitignore  Cargo.toml  Dockerfile  api.go  app.py  config.go  db.go  go.mod  logging.go  main.go  main.py  matchmaking.Dockerfile  matchmaking.go  player_data.go  player_data_test.go  requirements.txt  run_matchmaking.sh  services.go
matchmaking/docs/: graphgetter.yaml  matchmaking.yaml
matchmaking/internal/: api.go  config.go  db.go  logging.go  matchmaking.go  player_data.go  player_data_test.go  services.go
matchmaking/scripts/: run_matchmaking.sh
migrations/models/: 0_20251120173844_init.py  (+11 more)
prometheus/: prometheus.yml
proto/: matchmaking.proto
scripts/: run_matchmaking.sh  upstream-preserve-compose.sh
services/: admin_chat.py  ban.py  credits.py  discussion_invite.py  kill_timeout.py  kills_confirmation.py  logging.py  matchmaking.py  matchmaking_pb2.py  matchmaking_pb2_grpc.py  metrics.py  player_service.py  settings.py  strings.py  texts.py  time.py  user.py  user_exit.py
settings/: __init__.py  settings.py
stats-web/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
tgbot/: config.py
(+54 files in other folders)
